--- a/CSE445_preprocessing stage 1.ipynb
+++ b/CSE445_preprocessing stage 1.ipynb
@@ -2,12 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "1529b9f5",
+   "execution_count": null,
+   "id": "18511669",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b8035f8",
+   "metadata": {},
+   "source": [
+    "# Data Merge"
    ]
   },
   {
@@ -676,56 +684,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "9af4c3a1",
+   "execution_count": null,
+   "id": "0fdcbe49",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "school        0\n",
-       "sex           0\n",
-       "age           0\n",
-       "address       0\n",
-       "famsize       0\n",
-       "Pstatus       0\n",
-       "Medu          0\n",
-       "Fedu          0\n",
-       "Mjob          0\n",
-       "Fjob          0\n",
-       "reason        0\n",
-       "guardian      0\n",
-       "traveltime    0\n",
-       "studytime     0\n",
-       "failures      0\n",
-       "schoolsup     0\n",
-       "famsup        0\n",
-       "paid          0\n",
-       "activities    0\n",
-       "nursery       0\n",
-       "higher        0\n",
-       "internet      0\n",
-       "romantic      0\n",
-       "famrel        0\n",
-       "freetime      0\n",
-       "goout         0\n",
-       "Dalc          0\n",
-       "Walc          0\n",
-       "health        0\n",
-       "absences      0\n",
-       "G1            0\n",
-       "G2            0\n",
-       "G3            0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7463cfc9",
+   "metadata": {},
+   "source": [
+    "# drop unwanted columns"
    ]
   },
   {
@@ -794,7 +766,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
