--- a/CSE445_preprocessing stage 1.ipynb
+++ b/CSE445_preprocessing stage 1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "18511669",
    "metadata": {},
    "outputs": [],
@@ -684,10 +684,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "0fdcbe49",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "school        0\n",
+       "sex           0\n",
+       "age           0\n",
+       "address       0\n",
+       "famsize       0\n",
+       "Pstatus       0\n",
+       "Medu          0\n",
+       "Fedu          0\n",
+       "Mjob          0\n",
+       "Fjob          0\n",
+       "reason        0\n",
+       "guardian      0\n",
+       "traveltime    0\n",
+       "studytime     0\n",
+       "failures      0\n",
+       "schoolsup     0\n",
+       "famsup        0\n",
+       "paid          0\n",
+       "activities    0\n",
+       "nursery       0\n",
+       "higher        0\n",
+       "internet      0\n",
+       "romantic      0\n",
+       "famrel        0\n",
+       "freetime      0\n",
+       "goout         0\n",
+       "Dalc          0\n",
+       "Walc          0\n",
+       "health        0\n",
+       "absences      0\n",
+       "G1            0\n",
+       "G2            0\n",
+       "G3            0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.isnull().sum()"
    ]
@@ -1123,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "344f60c0",
    "metadata": {},
    "outputs": [],
@@ -1133,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "38fab045",
    "metadata": {},
    "outputs": [
@@ -1325,7 +1369,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1344,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "0462fdb4",
    "metadata": {},
    "outputs": [
@@ -1352,14 +1396,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/z9/mc87g0154b74svrcvhf1sn700000gn/T/ipykernel_1369/2893370972.py:1: DeprecationWarning: `import pandas_profiling` is going to be deprecated by April 1st. Please use `import ydata_profiling` instead.\n",
+      "/var/folders/wg/mrp6zv8n7r367zfjyfl56td80000gn/T/ipykernel_1298/2893370972.py:1: DeprecationWarning: `import pandas_profiling` is going to be deprecated by April 1st. Please use `import ydata_profiling` instead.\n",
       "  from pandas_profiling import ProfileReport\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "26b3d9438d3e46d1b0b1abcb4b1a0755",
+       "model_id": "63023192e5754f2681afe6526183f68b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1373,7 +1417,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ec1ba95f91044e6bfe8d8d1627ffd51",
+       "model_id": "507b95d84b1849ee8998f290936d3591",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1387,7 +1431,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f5983be439e418b86b585d333a3fe54",
+       "model_id": "ca5963da9ab14f9085dca83ea4598bea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1401,7 +1445,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "558c708b19e84f38bf4fc5c8f4177ce6",
+       "model_id": "b779dfd12d634ec18f11a4d90eb15c33",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1441,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 49,
    "id": "ef1c8b70",
    "metadata": {},
    "outputs": [
@@ -1661,7 +1705,7 @@
        "1043         no    yes       no  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1685,25 +1729,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 45,
    "id": "cb9b195a",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[1., 0., 1., ..., 1., 1., 0.],\n",
-       "       [1., 0., 1., ..., 1., 1., 0.],\n",
-       "       [1., 0., 0., ..., 1., 1., 0.],\n",
-       "       ...,\n",
-       "       [0., 1., 1., ..., 1., 1., 0.],\n",
-       "       [0., 1., 0., ..., 1., 1., 0.],\n",
-       "       [0., 1., 0., ..., 1., 1., 0.]])"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df_category_onehot' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/wg/mrp6zv8n7r367zfjyfl56td80000gn/T/ipykernel_1298/3009273277.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf_category_onehot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtoarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df_category_onehot' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1766,23 +1805,302 @@
    "id": "a9f41a85",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# OneHotEncoder"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "77e6e840",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "\n",
+    "df_category = ['sex','famsize','Pstatus','Mjob','Fjob','guardian','schoolsup','famsup','paid','activities','higher','romantic']\n",
+    "onehot_enc = ColumnTransformer([(\"cat\", OneHotEncoder(), df_category)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "0a256fde",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sex  famsize  Pstatus  Mjob      Fjob      guardian  schoolsup  famsup  paid  activities  higher  romantic\n",
+       "F    GT3      T        other     other     mother    no         no      no    yes         yes     no          12\n",
+       "                                                                yes     no    no          yes     no          11\n",
+       "                       at_home   other     mother    no         yes     no    no          yes     no          10\n",
+       "M    GT3      T        other     other     mother    no         no      no    yes         yes     no          10\n",
+       "                                                                              no          yes     no           9\n",
+       "                                                                                                              ..\n",
+       "F    LE3      T        services  services  father    no         yes     no    no          yes     no           1\n",
+       "                                                                no      yes   yes         yes     yes          1\n",
+       "     GT3      T        other     other     mother    yes        yes     yes   no          yes     no           1\n",
+       "     LE3      T        services  services  father    no         no      no    no          yes     yes          1\n",
+       "M    LE3      T        teacher   teacher   mother    no         yes     yes   no          yes     yes          1\n",
+       "Length: 634, dtype: int64"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['sex','famsize','Pstatus','Mjob','Fjob','guardian','schoolsup','famsup','paid','activities','higher','romantic']].value_counts()\n",
+    "#onehot_enc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "e9099164",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_encoded = onehot_enc.fit_transform(df)\n",
+    "df_encoded = pd.DataFrame(df_encoded)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "9e9c0250",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>21</th>\n",
+       "      <th>22</th>\n",
+       "      <th>23</th>\n",
+       "      <th>24</th>\n",
+       "      <th>25</th>\n",
+       "      <th>26</th>\n",
+       "      <th>27</th>\n",
+       "      <th>28</th>\n",
+       "      <th>29</th>\n",
+       "      <th>30</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1039</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1040</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1041</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1042</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1043</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 31 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       0    1    2    3    4    5    6    7    8    9   ...   21   22   23  \\\n",
+       "1039  0.0  1.0  0.0  1.0  1.0  0.0  0.0  0.0  0.0  1.0  ...  0.0  1.0  0.0   \n",
+       "1040  0.0  1.0  0.0  1.0  0.0  1.0  0.0  0.0  0.0  1.0  ...  1.0  0.0  1.0   \n",
+       "1041  0.0  1.0  1.0  0.0  0.0  1.0  0.0  0.0  1.0  0.0  ...  1.0  0.0  1.0   \n",
+       "1042  0.0  1.0  0.0  1.0  0.0  1.0  0.0  0.0  0.0  1.0  ...  1.0  0.0  1.0   \n",
+       "1043  0.0  1.0  0.0  1.0  0.0  1.0  0.0  0.0  1.0  0.0  ...  1.0  0.0  1.0   \n",
+       "\n",
+       "       24   25   26   27   28   29   30  \n",
+       "1039  1.0  1.0  0.0  0.0  1.0  1.0  0.0  \n",
+       "1040  0.0  1.0  0.0  0.0  1.0  1.0  0.0  \n",
+       "1041  0.0  1.0  0.0  0.0  1.0  1.0  0.0  \n",
+       "1042  0.0  1.0  0.0  0.0  1.0  1.0  0.0  \n",
+       "1043  0.0  1.0  0.0  0.0  1.0  1.0  0.0  \n",
+       "\n",
+       "[5 rows x 31 columns]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_encoded.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "73779fa2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1044, 31)"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_encoded.shape"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a256fde",
+   "id": "6623e23c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_encoded = pd.DataFrame(df_encoded, columns = ['housing_median_age', 'total_rooms',"
+   ]
   }
  ],
  "metadata": {
@@ -1801,7 +2119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
