--- a/CSE445_preprocessing stage 1.ipynb
+++ b/CSE445_preprocessing stage 1.ipynb
@@ -1807,7 +1807,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bd7ba50",
+   "id": "5b173324",
    "metadata": {},
    "source": [
     "# Profiling\n",
@@ -1834,7 +1834,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c54aba1b",
+   "id": "c93ea6ba",
    "metadata": {},
    "source": [
     "import os\n",
@@ -1852,7 +1852,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "196f97d7",
+   "id": "f57cab88",
    "metadata": {},
    "source": [
     "from pandas_profiling import ProfileReport\n",
@@ -2102,7 +2102,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "9aba46c3",
+   "id": "2fff2db3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2159,7 +2159,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Applying fit_transform on Train set\n",
+    "#Applying fit_transform on Train set \n",
+    "# df_encoded is updated train set after fit_transform\n",
     "df_encoded = onehot_enc.fit_transform(trainSet)\n",
     "df_encoded = pd.DataFrame(df_encoded) # updated dataframe after fit_transform applied\n",
     "#Applying transform on Test set\n",
@@ -3588,7 +3589,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "ba43ee6e",
+   "id": "6d512728",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3598,7 +3599,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "a5ce51a6",
+   "id": "b95e7723",
    "metadata": {},
    "outputs": [
     {
@@ -3969,8 +3970,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 118,
+   "id": "9911db55",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method DataFrame.info of      sex_F  sex_M  famsize_GT3  famsize_LE3  Pstatus_A  Pstatus_T  \\\n",
+       "0      0.0    1.0          1.0          0.0        0.0        1.0   \n",
+       "1      0.0    1.0          1.0          0.0        0.0        1.0   \n",
+       "2      0.0    1.0          0.0          1.0        0.0        1.0   \n",
+       "3      1.0    0.0          1.0          0.0        0.0        1.0   \n",
+       "4      0.0    1.0          0.0          1.0        1.0        0.0   \n",
+       "..     ...    ...          ...          ...        ...        ...   \n",
+       "830    1.0    0.0          1.0          0.0        0.0        1.0   \n",
+       "831    1.0    0.0          1.0          0.0        0.0        1.0   \n",
+       "832    0.0    1.0          1.0          0.0        0.0        1.0   \n",
+       "833    0.0    1.0          1.0          0.0        0.0        1.0   \n",
+       "834    0.0    1.0          0.0          1.0        0.0        1.0   \n",
+       "\n",
+       "     Mjob_at_home  Mjob_health  Mjob_other  Mjob_services  ...  famrel  \\\n",
+       "0             1.0          0.0         0.0            0.0  ...     5.0   \n",
+       "1             0.0          0.0         1.0            0.0  ...     4.0   \n",
+       "2             1.0          0.0         0.0            0.0  ...     4.0   \n",
+       "3             0.0          1.0         0.0            0.0  ...     2.0   \n",
+       "4             0.0          0.0         0.0            0.0  ...     4.0   \n",
+       "..            ...          ...         ...            ...  ...     ...   \n",
+       "830           0.0          0.0         1.0            0.0  ...     5.0   \n",
+       "831           0.0          0.0         1.0            0.0  ...     4.0   \n",
+       "832           0.0          0.0         1.0            0.0  ...     3.0   \n",
+       "833           0.0          0.0         0.0            1.0  ...     5.0   \n",
+       "834           0.0          0.0         0.0            1.0  ...     5.0   \n",
+       "\n",
+       "     freetime  goout  Dalc  Walc  health  absences    G1    G2    G3  \n",
+       "0         1.0    3.0   3.0   3.0     1.0       0.0  10.0  10.0  10.0  \n",
+       "1         4.0    3.0   2.0   2.0     1.0      26.0   7.0   8.0   8.0  \n",
+       "2         3.0    1.0   1.0   1.0     5.0       0.0   9.0  10.0  11.0  \n",
+       "3         4.0    4.0   2.0   3.0     4.0       0.0  17.0  16.0  16.0  \n",
+       "4         4.0    4.0   3.0   4.0     3.0      19.0  11.0   9.0  10.0  \n",
+       "..        ...    ...   ...   ...     ...       ...   ...   ...   ...  \n",
+       "830       3.0    3.0   1.0   3.0     1.0       4.0  15.0  15.0  15.0  \n",
+       "831       3.0    1.0   1.0   1.0     5.0      10.0  12.0  13.0  14.0  \n",
+       "832       2.0    3.0   1.0   3.0     4.0       0.0  10.0   9.0  11.0  \n",
+       "833       5.0    4.0   1.0   2.0     5.0       6.0  14.0  13.0  13.0  \n",
+       "834       3.0    5.0   4.0   5.0     3.0      13.0  12.0  12.0  13.0  \n",
+       "\n",
+       "[835 rows x 46 columns]>"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dset.info"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "26e0ef4e",
+   "id": "7338a212",
    "metadata": {},
    "outputs": [],
    "source": []
