--- a/CSE445_Implementation of classifiers.ipynb
+++ b/CSE445_Implementation of classifiers.ipynb
@@ -1,12 +1,57 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "638163a1",
+   "metadata": {},
+   "source": [
+    " Implementation of classifiers"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c3688088",
+   "execution_count": 10,
+   "id": "ca5396a1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "30450c54",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(835, 46)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trainSet = pd.read_csv('ScaledTrainSet.csv')\n",
+    "trainSet.shape\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e56f3775",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -25,7 +70,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
