KNN after smodinf accuracy 70.62
Co-Authored-By: AymanIHakim <97805310+AymanIHakim@users.noreply.github.com>

--- a/Dataset SMOTE.ipynb
+++ b/Dataset SMOTE.ipynb
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "5fa3718c",
+   "id": "880bcd38",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "76e893dd",
+   "id": "55a3800c",
    "metadata": {},
    "outputs": [
     {
@@ -114,19 +114,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "f4baf6cd",
+   "execution_count": 31,
+   "id": "820fea88",
    "metadata": {},
    "outputs": [],
    "source": [
-    "smodeTrainSet=X_resampled.join(y_resampled)\n",
-    "smodeTrainSet.to_csv('smodeTrainSet.csv')"
+    "smoteTrainSet=X_resampled.join(y_resampled)\n",
+    "smodeTrainSet.to_csv('smoteTrainSet.csv',index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "55d775d5",
+   "id": "1996dd45",
    "metadata": {},
    "outputs": [
     {
@@ -151,13 +151,13 @@
     }
    ],
    "source": [
-    "smodeTrainSet.columns"
+    "smoteTrainSet.columns"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0bffa9c",
+   "id": "7c619f65",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "327cd63b",
+   "id": "d5758153",
    "metadata": {},
    "outputs": [],
    "source": []
