fixed spelling smote

--- a/Dataset SMOTE.ipynb
+++ b/Dataset SMOTE.ipynb
@@ -132,7 +132,7 @@
    ],
    "source": [
     "smoteTrainSet=X_resampled.join(y_resampled)\n",
-    "smodeTrainSet.to_csv('smoteTrainSet.csv',index=False)"
+    "smoteTrainSet.to_csv('smoteTrainSet.csv',index=False)"
    ]
   },
   {
