--- a/Research question 4.ipynb
+++ b/Research question 4.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "source": [
     "## Research question 4\n",
-    "Does alcohol consumption affect the relationship of an adolescent and their family?"
+    "Does alcohol consumption affect the relationship of an adolescent and their family?\n",
+    "columns selected : [['famsize_GT3', 'famsize_LE3', 'Pstatus_A', 'Pstatus_T', 'Mjob_at_home', 'Mjob_health', 'Mjob_other', 'Mjob_services','Mjob_teacher', 'Fjob_at_home', 'Fjob_health', 'Fjob_other', 'Fjob_services', 'Fjob_teacher', 'guardian_father', 'guardian_mother', 'guardian_other', 'famsup_no', 'famsup_yes', 'Medu', 'Fedu','famrel', 'freetime', 'goout']]"
    ]
   },
   {
@@ -34,7 +35,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
