XAI applied on all questions

--- a/Research Question 5.ipynb
+++ b/Research Question 5.ipynb
@@ -14762,15 +14762,243 @@
    "id": "c388dc52",
    "metadata": {},
    "source": [
-    "## XAI\n"
+    "## XAI using LIME\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c2c9fae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# conda install -c conda-forge shap\n",
+    "# conda install -c conda-forge ds-lime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d3c8390",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from lime.lime_tabular import LimeTabularExplainer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62f76e36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_names = X_train.columns\n",
+    "#X_train.columns.values.tolist()\n",
+    "class_names = y_train.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da8134dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a LimeTabularExplainer object\n",
+    "explainer = LimeTabularExplainer(X_train.values, feature_names=feature_names, class_names=['alc'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cc10360",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Select a specific instance from the testing set for explanation\n",
+    "instance_idx = 0\n",
+    "instance = X_test.values[instance_idx]\n",
+    "true_label = y_test[instance_idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b2d4ccc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate explanations using LIME\n",
+    "explanation_lime = explainer.explain_instance(instance, best_grid_dt.predict_proba, num_features=len(feature_names))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2fbaf2ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print the true label and predicted probabilities\n",
+    "print(\"True Label:\", true_label)\n",
+    "print(\"Predicted Probabilities:\", best_grid_dt.predict_proba([instance]))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82348210",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print the top features and their weights in the LIME explanation\n",
+    "print(\"LIME Explanation:\")\n",
+    "for feature, weight in explanation_lime.as_list():\n",
+    "    print(feature, weight)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c282940a",
+   "id": "4b17afd2",
    "metadata": {},
    "source": [
-    "## Naive Bayes"
+    "## XAI using SHAP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5463f832",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import shap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c8e1125",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate explanations using SHAP\n",
+    "explainer_shap = shap.Explainer(best_grid_dt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25680189",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot the summary plot of SHAP values\n",
+    "shap_values = shap.TreeExplainer(best_grid_dt).shap_values(X_train)\n",
+    "shap.summary_plot(shap_values, X_train, plot_type=\"bar\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70ffaea9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Select a specific instance from the testing set for explanation\n",
+    "instance_idx = 0\n",
+    "instance = X_test.values[instance_idx]\n",
+    "\n",
+    "# Get the SHAP values for the predicted class\n",
+    "shap_values = explainer_shap(instance)\n",
+    "\n",
+    "# Get the expected value for the predicted class\n",
+    "expected_value = explainer_shap.expected_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d531832",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Select a specific instance from the testing set for explanation\n",
+    "instance_idx = 0\n",
+    "instance = X_test.values[instance_idx]\n",
+    "#true_label = y_test.values[instance_idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a40508b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shap_values = explainer_shap.shap_values(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3431bed2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the SHAP values and expected values for the predicted class\n",
+    "shap_values_instance = shap_values[instance_idx]\n",
+    "expected_value = explainer_shap.expected_value[true_label]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99bb612f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print the SHAP values for the instance\n",
+    "print(\"SHAP Values:\")\n",
+    "for feature, shap_value in zip(feature_names, shap_values_instance):\n",
+    "    print(feature, shap_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a3b7480",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shap.plots.beeswarm(shap_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3c47ac9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create Tree Explainer object that can calculate shap values\n",
+    "explainer = shap.TreeExplainer(best_grid_rf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd144cdc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate Shap values\n",
+    "choosen_instance = X_test.loc[[10]]\n",
+    "shap_values = explainer.shap_values(choosen_instance)\n",
+    "shap.initjs()\n",
+    "shap.force_plot(explainer.expected_value[1], shap_values[1], choosen_instance)"
    ]
   }
  ],
