--- a/Research question 3 .ipynb
+++ b/Research question 3 .ipynb
@@ -13902,17 +13902,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from lime.lime_tabular import LimeTabularExplainer\n",
-    "import shap\n"
+    "from lime.lime_tabular import LimeTabularExplainer"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a1cd723c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -13950,27 +13941,6 @@
    ],
    "source": [
     "feature_names"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "id": "d462638b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DecisionTreeClassifier(max_depth=15)"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "best_grid_dt.fit(X_train.values, y_train)"
    ]
   },
   {
@@ -14093,7 +14063,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a64b946b",
+   "id": "8cf60b03",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -14104,6 +14074,16 @@
    "metadata": {},
    "source": [
     "## XAI using SHAP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71b9c76b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import shap"
    ]
   },
   {
@@ -14120,7 +14100,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "087c9065",
+   "id": "125f0401",
    "metadata": {},
    "outputs": [
     {
