--- a/Research Question 5.ipynb
+++ b/Research Question 5.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "5a4f3038",
    "metadata": {},
    "outputs": [
@@ -120,15 +120,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "01caa77f",
+   "execution_count": 5,
+   "id": "a5418fdd",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "# Separate target from dataset\n",
     "y_train = X_train['alc']\n",
+    "X_train = X_train [['famsup_no', 'schoolsup_no','paid_no', 'higher_no' ]] \n",
+    "y_test = X_test['alc']\n",
+    "X_test = X_test[['famsup_no', 'schoolsup_no','paid_no', 'higher_no' ]] "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff656156",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# Separate target from dataset\n",
+    "y_train = X_train['alc']\n",
+    "X_train = X_train [['famsup_no', '\n",
+    "# Separate target from dataset\n",
+    "y_train = X_train['alc']\n",
     "X_train = X_train [['famsup_no', 'famsup_yes','schoolsup_no','schoolsup_yes','paid_no','paid_yes','higher_no','higher_yes' ]] \n",
+    "y_test = X_test['alc']\n",
+    "X_test = X_test[['famsup_no', 'famsup_yes','schoolsup_no','schoolsup_yes','paid_no','paid_yes','higher_no','higher_yes' ]] famsup_yes','schoolsup_no','schoolsup_yes','paid_no','paid_yes','higher_no','higher_yes' ]] \n",
     "y_test = X_test['alc']\n",
     "X_test = X_test[['famsup_no', 'famsup_yes','schoolsup_no','schoolsup_yes','paid_no','paid_yes','higher_no','higher_yes' ]] "
    ]
